--- a/resources/css/styles.css
+++ b/resources/css/styles.css
@@ -41,27 +41,6 @@ body{
     font-family: "Mont Regular";
 }
 
-::-webkit-scrollbar {
-    width: 8px;
-    height: 8px;
-}
-
-::-webkit-scrollbar-track {
-    box-shadow: inset 0 0 7px rgba(0,0,0,1);
-    border-radius: 10px;
-    background-color: #000;
-}
-
-::-webkit-scrollbar-thumb {
-    border-radius: 10px;
-	box-shadow: inset 0 0 6px rgba(0,0,0,.3);
-    background-color: #333;
-}
-
-::-webkit-scrollbar-thumb:hover {
-    background-color: #222;
-}
-
 /* div {
     border: 2px solid red;
 } */
@@ -72,6 +51,24 @@ body{
 
 .text-white {
     color: white;
+}
+
+.rotate180 {
+    transform: rotate(180deg);
+}
+
+.alert-success {
+    text-align: center;
+    color: white;
+    background-color: rgb(60, 255, 0);
+    border-color: rgb(60, 255, 0);
+}
+
+.alert-danger {
+    text-align: center;
+    color: white;
+    background-color: rgb(255, 0, 0);
+    border-color: rgb(255, 0, 0);
 }
 
 section#landing-page-hero {
@@ -90,7 +87,7 @@ section#landing-page-hero {
 }
 
 .parallax-go-up {
-    animation: goUp 5s linear infinite;
+    animation: goUp 6s linear infinite;
 }
 
 .layer {
@@ -181,7 +178,7 @@ section#landing-page-hero {
     transform: rotateZ(180deg);
 }
 
-header {
+.header {
     width: 100%;
     z-index: 999;
     position: -webkit-sticky;
@@ -194,26 +191,70 @@ header {
     top: 75px;
 }
 
-nav {
+.nav {
     padding: 15px 100px;
     display: flex;
     justify-content: space-between;
 }
 
-nav .brand-dinamik img {
+.nav .brand-dinamik img {
     width: 180px;
 }
 
-nav .nav-dinamik-item ul li {
+.nav .nav-dinamik-item ul li {
     display: inline-block;
     margin-top: 10px;
     padding-left: 15px;
+    color: white;
 }
 
-nav .nav-dinamik-item ul li a {
+.nav .nav-dinamik-item ul li a {
     font-size: 0.9em;
     text-decoration: none;
     color: white;
+}
+
+.nav .nav-dinamik-item ul li.dropdown {
+    display: inline-block;
+    position: relative;
+}
+
+.nav .nav-dinamik-item ul li.dropdown:hover {
+    cursor: pointer;
+}
+
+.nav .nav-dinamik-item ul li.dropdown i {
+    transition: all 0.5s ease;
+}
+
+.nav .nav-dinamik-item ul li.dropdown span {
+    margin-right: 5px;
+}
+
+.nav .nav-dinamik-item ul li.dropdown .dropdown-menu {
+    display: none;
+    position: absolute;
+    top: 150%;
+    left: 50%;
+    transform: translateX(-50%);
+    padding: 0px 0px;
+    overflow: hidden;
+    border-radius: 5px;
+    min-width: 120px;
+    transition: all 0.3s ease;
+}
+
+.nav .nav-dinamik-item ul li.dropdown .dropdown-menu a {
+    display: block;
+    padding: 10px 15px;
+    color: black;
+    background-color: white;
+    transition: all 0.2s ease;
+}
+
+.nav .nav-dinamik-item ul li.dropdown .dropdown-menu a:hover {
+    color: white;
+    background-color: #d600ff;
 }
 
 .bar1, .bar2, .bar3 {
@@ -388,6 +429,7 @@ section {
 }
 
 .competition-prev button:hover, .competition-next button:hover {
+    cursor: pointer;
     color: #777;
 }
 
@@ -412,7 +454,7 @@ section {
     top: 10px;
     width: 700px;
     height: auto;
-    padding: 70px 100px;
+    padding: 90px 100px;
     background-color: black;
     position: relative;
     margin: auto;
@@ -422,10 +464,12 @@ section {
 .form-container::before {
     content: '';
     width: 100%;
-    height: 25%;
-    background-color: #d600ff;
+    height: 150px;
+    background-image: url(../img/img-form.jpg);
+    background-size: cover;
+    background-position: top center;
     position: absolute;
-    top: -20%;
+    top: -100px;
     left: 50%;
     transform: translateX(-50%);
 }
@@ -525,10 +569,57 @@ form {
     cursor: pointer;
 }
 
+.remember-login-section {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    margin-top: 40px;
+}
+
+.remember {
+    /* border: 1px solid red; */
+}
+
+.remember .check-column {
+    position: relative;
+    border: 1.5px solid #ffee00;
+    border-radius: 50%;
+    width: 20px;
+    height: 20px;
+}
+
+.remember .check-column:hover {
+    cursor: pointer;
+}
+
+.remember .check-column .check-icon {
+    display: none;
+    position: absolute;
+    top: 50%;
+    transform: translateY(-50%);
+}
+
+.remember .check-column .check-icon i {
+    color: green;
+    font-size: 20px;
+    -webkit-text-stroke-width: 2px;
+    -webkit-text-stroke-color: black;
+}
+
+.remember .check-column .remember-text {
+    position: absolute;
+    display: block;
+    color: white;
+    font-size: 14px;
+    right: -110px;
+}
+
+.login {
+    /* border: 1px solid red; */
+}
+
 .button-form {
     display: block;
-    margin-top: 30px;
-    margin-left: auto;
     padding: 5px 30px;
     text-align: center;
     color: white;
@@ -536,6 +627,179 @@ form {
     border: none;
     outline: none;
     border-radius: 5px;
+}
+
+.link {
+    text-align: center;
+    margin-top: 50px;
+    color: #d600ff;
+    font-size: 12px;
+    font-family: "Mont Regular Italic";
+    letter-spacing: 1px;
+}
+
+span.link-span {
+    display: block;
+    text-align: center;
+    margin-top: 8px;
+}
+
+a.link-href {
+    text-decoration: none;
+    color: #ffee00;
+}
+
+/*  =========================================== DASHBOARD PAGE =================================== */
+
+.nav-side-bar {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 250px;
+    height: 100vh;
+    text-align: center;
+    z-index: 999;
+    background-color: black;
+}
+
+.nav-side-bar .nav-side-brand {
+    margin-top: 40px;
+}
+
+.nav-side-bar .nav-side-brand a img {
+    margin: auto;
+    width: 180px;
+}
+
+.username-bar {
+    display: inline-block;
+    margin-top: 35px;
+    background-color: #333;
+    padding: 2px 60px;
+    border-radius: 10px;
+}
+
+.username-bar span {
+    color: white;
+    font-size: 12px;
+}
+
+.nav-side-list-container {
+    margin-top: 30px;
+}
+
+.nav-side-list-container ul {
+    list-style: none;
+    width: 110px;
+    margin: auto;
+    padding: 30px 0px;
+}
+
+.nav-side-list-container ul li {
+    text-align: left;
+    margin-bottom: 25px;
+    position: relative;
+}
+
+.nav-side-list-container ul li a {
+    color: #555;
+    text-decoration: none;
+}
+
+.nav-side-list-container ul li::before {
+    content: 'X';
+    position: absolute;
+    color: #555;
+    top: 0;
+    left: -20px;
+}
+
+.nav-side-list-container ul li:hover a {
+    color: white;
+}
+
+.nav-side-list-container ul li:hover::before {
+    color: white;
+}
+
+.nav-side-list-container ul li.active a {
+    color: white;
+}
+
+.nav-side-list-container ul li.active::before {
+    color: white;
+}
+
+.dashboard-header {
+    background-color: #111;
+    margin-left: 250px;
+    color: white;
+}
+
+.dashboard-header .header-container {
+    display: flex;
+    justify-content: space-between;
+    padding: 40px 50px;
+}
+
+.dashboard-header .header-container .team-name {
+    display: block;
+    font-family: "Mont Bold";
+    font-size: 28px;
+}
+
+.dashboard-header .header-container .team-competition {
+    display: block;
+    font-family: "Mont Regular Italic";
+    font-size: 14px;
+    color: #555;
+}
+
+.back-home-section {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding: 15px 15px;
+    height: 50px;
+    background-color: black;
+    border-radius: 8px;
+}
+
+.back-home-section a {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    text-decoration: none;
+    color: white;
+}
+
+.back-home-section a:hover .symbol-back {
+    animation: symbol-back 0.5s ease infinite alternate;
+}
+
+.symbol-back {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin-right: 15px;
+    margin-left: 5px;
+    margin-top: 0;
+}
+
+.message-back {
+    display: block;
+    text-align: center;
+    width: 70px;
+    font-size: 11px;
+    font-family: "Mont Bold";
+}
+
+.dashboard {
+    margin-left: 250px;
+    padding: 70px 70px;
+    color: white;
+    background-color: #111;
+    min-height: 100vh;
 }
 
 /* ============================================ ANIMATION =========================================== */
@@ -580,6 +844,11 @@ form {
     }
 }
 
+@keyframes symbol-back {
+    to {
+        transform: translateX(-5px);
+    }
+}
 
 /* ============================= RESOLUSI 450px ~ 900px (POSISI LANDSCAPE) ================================== */
 
