--- a/resources/css/dashboard-scrollbar.css
+++ b/resources/css/dashboard-scrollbar.css
@@ -15,3 +15,23 @@
 ::-webkit-scrollbar-thumb:hover {
     background-color: #222;
 }
+
+@media only screen and (max-width: 900px) { 
+    ::-webkit-scrollbar {
+        width: 3px;
+        height: 3px;
+    }
+    
+    ::-webkit-scrollbar-track {
+        background-color: #111;
+    }
+    
+    ::-webkit-scrollbar-thumb {
+        border-radius: 10px;
+        background-color: #444;
+    }
+    
+    ::-webkit-scrollbar-thumb:hover {
+        background-color: #222;
+    }
+}
