--- a/resources/css/styles.css
+++ b/resources/css/styles.css
@@ -45,6 +45,8 @@ body {
     background-color: black;
     font-family: "Mont Regular";
     color: white;
+    padding: 0;
+    margin: 0;
 }
 
 input[type=number]::-webkit-inner-spin-button,
@@ -387,7 +389,6 @@ section#landing-page-hero {
     margin-top: 0px;
     max-height: 0px;
     overflow: auto;
-    /* border: 1px solid red; */
     transition: 0.3s all ease;
 }
 
@@ -1075,6 +1076,10 @@ a.link-href {
     margin-bottom: 30px;
 }
 
+.dashboard-dinamik-logo {
+    width: 200px;
+}
+
 .dashboard-section-header {
     display: block;
     margin-bottom: 30px;
@@ -1506,6 +1511,27 @@ td.min {
     color: white;
 }
 
+.countdown {
+    margin-top: 40px;
+    text-align: center;
+}
+
+.text-countdown {
+    font-size: 24px;
+}
+
+.countdown ul {
+    margin-top: 10px;
+}
+
+.countdown ul li {
+    list-style: none;
+    display: inline-block;
+    font-size: 50px;
+    font-family: "Mont Bold";
+    margin-left: 10px;
+}
+
 /* ============================================== Admin Dashboard Page ===================================== */
 
 .table-admin-dashboard {
@@ -1596,6 +1622,132 @@ td.min {
     margin-left: 5px;
 }
 
+/* ============================================= SEMINAR ============================================= */
+
+.speaker-container {
+    margin-top: 40px;
+    overflow-x: hidden;
+}
+
+.speaker {
+    width: 400px;
+    position: relative;
+    text-align: center;
+}
+
+.speaker img {
+    width: 50%;
+}
+
+.container-nama-speaker {
+    width: 100%;
+    position: absolute;
+    bottom: 0;
+}
+
+.nama-speaker {
+    font-size: 26px;
+}
+
+.mystery-speaker-container {
+    text-align: center;
+    font-size: 11px;
+    position: relative;
+    bottom: 100px;
+}
+
+.jabatan-speaker {
+    letter-spacing: 4px;
+    font-family: 'Mont Light';
+    font-size: 14px;
+}
+
+.seminar-kit-container {
+    margin-left: 30px;
+    margin-right: 30px;
+}
+
+.kit-container {
+    width: 80%;
+    height: auto;
+    margin-left: auto;
+    margin-right: auto;
+    padding: 20px 15px;
+    border-radius: 15px;
+    background: linear-gradient(-45deg, #84004d, #001631, #012b55, #930073);
+    background-size: 400% 400%;
+    animation: gradientBG 10s ease infinite;
+}
+
+.kit-container img {
+    width: 30%;
+    height: auto;
+}
+
+.kit-text {
+    font-size: 22px;
+}
+
+.seminar-place {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.circle {
+    width: 150px;
+    height: 150px;
+    border-radius: 50%;
+    background: rgb(84, 59, 0);
+    background: linear-gradient(149deg, rgba(84, 59, 0, 1) 0%, rgba(216, 141, 0, 1) 49%, rgba(255, 202, 141, 1) 100%);
+    position: relative;
+    z-index: -1;
+}
+
+.circle::after {
+    content: '';
+    width: 100%;
+    height: 100%;
+    border-radius: 50%;
+    border: 1px solid white;
+    background-color: transparent;
+    position: absolute;
+    bottom: -10px;
+    right: -20px;
+}
+
+.place-container {
+    margin-left: -80px;
+    text-align: left;
+}
+
+.place-text-bold {
+    font-family: "Mont Bold";
+    display: block;
+    font-size: 20px;
+}
+
+.place-text-bold-italic {
+    font-family: "Mont Bold Italic";
+    display: block;
+    font-size: 20px;
+}
+
+.place-text-light {
+    font-family: "Mont Light";
+    letter-spacing: 10px;
+    display: block;
+}
+
+.seminar-register-container {
+    width: 80%;
+    padding: 25px;
+    border-radius: 15px;
+    background: rgb(12, 0, 34);
+    background: linear-gradient(150deg, rgba(12, 0, 34, 1) 0%, rgba(78, 9, 121, 1) 50%, rgba(188, 136, 255, 1) 100%);
+}
+
+
 /* ============================================ ANIMATION =========================================== */
 
 @keyframes autofill {
@@ -1655,7 +1807,21 @@ td.min {
     }
 }
 
-/* ============================= RESOLUSI 450px ~ 900px (POSISI LANDSCAPE) ================================== */
+@keyframes gradientBG {
+    0% {
+        background-position: 0% 50%;
+    }
+
+    50% {
+        background-position: 100% 50%;
+    }
+
+    100% {
+        background-position: 0% 50%;
+    }
+}
+
+/* ============================= RESOLUSI 450px ~ 768px (POSISI LANDSCAPE) ================================== */
 
 @media only screen and (max-width: 900px) {
 
@@ -1970,6 +2136,10 @@ td.min {
         margin-bottom: 30px;
     }
 
+    .dashboard-dinamik-logo {
+        width: 180px;
+    }
+
     .dashboard-section-header {
         margin-bottom: 20px;
     }
@@ -2042,6 +2212,88 @@ td.min {
     .edit-payment-button {
         margin-top: 10px;
     }
+
+    .countdown {
+        margin-top: 30px;
+    }
+
+    .text-countdown {
+        font-size: 21px;
+    }
+
+    .countdown ul {
+        margin-top: 10px;
+    }
+
+    .countdown ul li {
+        font-size: 45px;
+    }
+
+    /* ===================================== Seminar ======================================= */
+
+    .speaker-container {
+        margin-top: 30px;
+    }
+
+    .speaker {
+        width: 400px;
+        position: relative;
+        text-align: center;
+    }
+
+    .speaker img {
+        width: 50%;
+    }
+
+    .container-nama-speaker {
+        width: 100%;
+        position: absolute;
+        bottom: 0;
+    }
+
+    .nama-speaker {
+        font-size: 24px;
+    }
+
+    .mystery-speaker-container {
+        text-align: center;
+        font-size: 11px;
+        position: relative;
+        bottom: 100px;
+    }
+
+    .jabatan-speaker {
+        letter-spacing: 4px;
+        font-family: 'Mont Light';
+        font-size: 12px;
+    }
+
+    .seminar-kit-container {
+        margin-left: 30px;
+        margin-right: 30px;
+    }
+
+    .kit-container {
+        width: 80%;
+        height: auto;
+        margin-left: auto;
+        margin-right: auto;
+        padding: 20px 15px;
+        border-radius: 15px;
+        background: linear-gradient(-45deg, #84004d, #001631, #012b55, #930073);
+        background-size: 400% 400%;
+        animation: gradientBG 10s ease infinite;
+    }
+
+    .kit-container img {
+        width: 30%;
+        height: auto;
+    }
+
+    .kit-text {
+        font-size: 24px;
+    }
+
 
 }
 
@@ -2316,6 +2568,10 @@ td.min {
         margin-bottom: 30px;
     }
 
+    .dashboard-dinamik-logo {
+        width: 150px;
+    }
+
     .dashboard-section-header {
         font-size: 13px;
     }
@@ -2388,6 +2644,18 @@ td.min {
         width: 100%;
     }
 
+    .countdown {
+        margin-top: 20px;
+    }
+
+    .text-countdown {
+        font-size: 16px;
+    }
+
+    .countdown ul li {
+        font-size: 35px;
+    }
+
     /* ============================================== Competition Page ===================================== */
 
     .header-competition {
@@ -2408,6 +2676,99 @@ td.min {
         padding: 20px 50px;
         font-size: 16px;
         text-align: center;
+    }
+
+    /* ============================================== Seminar Page ===================================== */
+
+    .speaker-container {
+        margin-top: 40px;
+    }
+
+    .speaker {
+        width: 280px;
+        position: relative;
+        text-align: center;
+    }
+
+    .speaker img {
+        width: 50%;
+    }
+
+    .container-nama-speaker {
+        width: 100%;
+        position: absolute;
+        bottom: 0;
+    }
+
+    .nama-speaker {
+        font-size: 20px;
+    }
+
+    .mystery-speaker-container {
+        text-align: center;
+        font-size: 11px;
+        position: relative;
+        bottom: 100px;
+    }
+
+    .jabatan-speaker {
+        letter-spacing: 4px;
+        font-family: 'Mont Light';
+        font-size: 10px;
+    }
+
+    .seminar-kit-container {
+        margin-left: 30px;
+        margin-right: 30px;
+    }
+
+    .kit-container {
+        width: 80%;
+        height: auto;
+        margin-left: auto;
+        margin-right: auto;
+        padding: 20px 15px;
+        border-radius: 15px;
+        background: linear-gradient(-45deg, #84004d, #001631, #012b55, #930073);
+        background-size: 400% 400%;
+        animation: gradientBG 10s ease infinite;
+    }
+
+    .kit-container img {
+        width: 30%;
+        height: auto;
+    }
+
+    .kit-text {
+        font-size: 16px;
+    }
+
+    .circle {
+        width: 130px;
+        height: 130px;
+        border-radius: 50%;
+        background: rgb(84, 59, 0);
+        background: linear-gradient(149deg, rgba(84, 59, 0, 1) 0%, rgba(216, 141, 0, 1) 49%, rgba(255, 202, 141, 1) 100%);
+        position: relative;
+        z-index: -1;
+    }
+
+    .place-container {
+        margin-left: -80px;
+        text-align: left;
+    }
+
+    .place-text-bold {
+        font-family: "Mont Bold";
+        display: block;
+        font-size: 18px;
+    }
+
+    .place-text-light {
+        font-family: "Mont Light";
+        letter-spacing: 5px;
+        display: block;
+        font-size: 14px;
     }
 
 }
